Fix iPhone/mobile device layout
Desperately needed fixes for broken layout.
Bottom bar UI no longer covers up footer in iOS Safari.

Just hide non-essential stuff at low screen width with media queries.
Note: Some stuff (visualizer, app subtitle) is still hidden with device detection.

--- a/src/index.css
+++ b/src/index.css
@@ -190,10 +190,13 @@ body,#root {
     padding: 0 var(--charW2);
     display: flex;
     flex-direction: column;
-    height: 100vh;
     box-sizing: border-box;
-    margin: 0 auto;
     font-variant-numeric: tabular-nums;
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
 }
 
 .App-header {
@@ -257,6 +260,11 @@ body,#root {
     border-left: 1px solid var(--clickable);
     flex-shrink: 0;
 }
+@media screen and (max-width: 600px) {
+    .App-footer-art {
+        display: none;
+    }
+}
 
 .App-footer-main {
     flex-grow: 1;
@@ -295,6 +303,13 @@ body,#root {
     color: var(--neutral4);
     margin: 0 var(--charW1);
     padding: 0 var(--charW1);
+}
+
+.App-footer-more-buttons {
+    float: right;
+}
+@media screen and (max-width: 600px) {
+    .App-footer-more-buttons { display: none; }
 }
 
 .App .Slider {
@@ -360,8 +375,13 @@ body,#root {
 .Visualizer-analyzer { display: block; image-rendering: pixelated; }
 .Visualizer-spectrogram { display: block; flex-grow: 1; min-height: 0; image-rendering: pixelated; }
 
-.TimeSlider { margin: var(--charH) 0; flex-grow: 1 }
+.TimeSlider { flex-grow: 1; margin: var(--charH) 0; }
 .TimeSlider-labels, .VolumeSlider-labels { display: flex; flex-direction: row; justify-content: space-between; }
+
+.VolumeSlider { flex-shrink: 0; margin-top: var(--charH); margin-bottom: var(--charH); margin-left: var(--charW2); }
+@media screen and (max-width: 600px) {
+    .VolumeSlider { display: none; }
+}
 
 .Song-now-playing {
     background-color: var(--button);
